

  ChangeLog.txt for libSUFR
  
    
   24: 01/01/2011:
     - Fix in CMake: using MATCHES iso STREQUAL allows partial match of compiler name
     
   23: AstroFloyd, 31/12/2010
     - Updated constants.f90:
       - renamed set_constants*() to set_SUFR_constants*()
       - added a single-precision version of all mathematical constants
     - Tweaked CMake files a bit
     
   21,22: AstroFloyd, 31/12/2010
     - Added g95 to CMake
     - Fixed a few g95 warnings
     
   20: AstroFloyd, 30/12/2010
     - Default CMake files without run-time checks
     
   19: AstroFloyd, 30/12/2010
     - Added doc/README and doc/LICENCE files to svn
     - Extended copyright to 2011, added SF url to source
   
   18: AstroFloyd, 29/12/2010
     - Updated date/time constants
     
   17: AstroFloyd, 29/12/2010
     - Updated CMake files
   
   16: AstroFloyd, 26/12/2010
      - Compile with gfortran using F2008 standard
   
   15: AstroFloyd, 18/12/2010 = SF rev.001
      - Changed Doxygen output dir
   
   14: AstroFloyd, 18/12/2010
      - added make script to svn
   
   13: AstroFloyd, 18/12/2010
      - updated CMake: compile locally, then install
      
   12: AstroFloyd, 18/12/2010
      - updated Doxygen comments
      
   11: AstroFloyd, 22/11/2010
      - Run ifort with Fortran-2003 standard
   
   10: AstroFloyd, 06/11/2010
      - Added interpolate.f90 for interpolation/fitting routines
      - Added constants d2h,h2d, program_path. Renamed programname to program_name
      
    9: AstroFloyd, 5/10/2010
      - Updated Doxygen
    
    8: AstroFloyd, 5/10/2010
      - Renamed libAF to libSUFR internally
      
    7: AstroFloyd, 5/10/2010
      - Added statistics.f90
      
    6: AstroFloyd, 5/10/2010
      - Converting libAF git repository, 8/09/2010:
	- updated constants.f90
	- make constants explicitly private/public
      
    5: AstroFloyd, 5/10/2010
      - Converting libAF git repository, 8/09/2010:
	- added binning.f90
      
    4: AstroFloyd, 5/10/2010